Introduce JDK 8 compatibility